k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: trifid
  annotations:
    kubernetes.io/tls-acme: "true"
    external-dns.alpha.kubernetes.io/hostname: ld-data-bs-ch.zazukoians.org
spec:
  tls:
    - secretName: ld-data-bs-ch-cert
      hosts:
        - ld.data-bs.ch
  rules:
    - host: ld.data-bs.ch
      http:
        paths:
          - path: /
            backend:
              serviceName: trifid
              servicePort: 80
